fix checkbox invisible when zoomed out in Safari

--- a/src/applications/gi/sass/partials/_gi-search-page.scss
+++ b/src/applications/gi/sass/partials/_gi-search-page.scss
@@ -177,4 +177,7 @@
       margin-bottom: 1.333em;
     }
   }
+  .gi-checkbox-label:before {
+    box-shadow: 0 0 0 2px #ffffff, 0 0 0 3px #757575;
+  }
 }
